--- a/Demo/saleapp/templates/index.html
+++ b/Demo/saleapp/templates/index.html
@@ -1,35 +1,8 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Trang chủ</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
-          integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
-    <link rel="stylesheet" href="{{ url_for('static', filename='css/style.css') }}">
-</head>
-<body>
+{% extends 'layout/base.html' %}
 
-<nav class="navbar navbar-expand-sm bg-dark navbar-dark">
-    <div class="container-fluid">
-        <a class="navbar-brand" href="#">Logo</a>
-        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#collapsibleNavbar">
-            <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="collapsibleNavbar">
-            <ul class="navbar-nav">
-                <li class="nav-item">
-                    <a class="nav-link" href="#">Trang chủ</a>
-                </li>
-                {% for cate in categories %}
-                <li class="nav-item">
-                    <a class="nav-link" href="?category_id={{cate.id}}">{{cate.name}}</a>
-                </li>
-                {% endfor %}
-            </ul>
-        </div>
-    </div>
-</nav>
-<div class="container">
+{% block container %}
+
+    {% if product %}
     <div class="row">
         {% for p in product %}
         <div class="col-md-3 col-sm-12" style="padding: 1rem;">
@@ -38,21 +11,15 @@
                 <div class="card-body">
                     <h4 class="card-title">{{p.name}}</h4>
                     <p class="card-text">{{p.price}}</p>
-                    <a href="#" class="btn btn-primary">Xem chi tiet</a>
+                    <a href="/products/{{p.id}}" class="btn btn-primary">Xem chi tiet</a>
                     <a href="#" class="btn btn-danger">Dat hang</a>
                 </div>
             </div>
         </div>
         {% endfor %}
     </div>
-</div>
+    {% else %}
+        <p class="text-danger">Không có sản phẩm</p>
+    {%endif%}
 
-
-<script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js"
-        integrity="sha384-oBqDVmMz9ATKxIep9tiCxS/Z9fNfEXiDAYTujMAeBAsjFuCZSmKbSSUnQlmh/jp3"
-        crossorigin="anonymous"></script>
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.min.js"
-        integrity="sha384-IDwe1+LCz02ROU9k972gdyvl+AESN10+x7tBKgc9I5HFtuNz0wWnPclzo6p9vxnk"
-        crossorigin="anonymous"></script>
-</body>
-</html>
+{% endblock %}
